--- a/CobroCoactivo/web/paginas/gestionPersonas/detallePersona.xhtml
+++ b/CobroCoactivo/web/paginas/gestionPersonas/detallePersona.xhtml
@@ -5,12 +5,14 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:jsf="http://xmlns.jcp.org/jsf"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
-                xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+                xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+                xmlns:p="http://primefaces.org/ui">
     <ui:define name="content">
         <h:form id="frmDetallePersona">
             <div class="content-wrapper">
                 <h:outputText value="#{gestionPersonaBean.encabezadoDetallePersona}" escape="false"></h:outputText>
                 <section class="content">
+                    <p:messages autoUpdate="true" id="mensajeDetallePersona" showIcon="false" closable="true" severity="error"></p:messages>
                     <div class="box box-danger">
                         <div class="box-body box-danger">
                             <div class="box-header with-border">
@@ -37,7 +39,7 @@
                                     <div class="col-sm-3">
                                         <div class="form-group">
                                             <label>Primer nombre</label>
-                                            <h:inputText id="txtNombre1" style="border-color: black"  value="#{gestionPersonaBean.detallePersona.nombre1}" class="form-control" disabled="#{!gestionPersonaBean.detallePersona.editable}"></h:inputText>
+                                            <h:inputText id="txtNombre1" style="border-color: black"  value="#{gestionPersonaBean.detallePersona.nombre1}" class="form-control" disabled="#{!gestionPersonaBean.detallePersona.editable}" required="true" requiredMessage="Primer nombre requerido"></h:inputText>
                                         </div>
                                     </div>
                                     <div class="col-sm-3">
@@ -49,7 +51,7 @@
                                     <div class="col-sm-3">
                                         <div class="form-group">
                                             <label>Primer apellido</label>
-                                            <h:inputText id="txtApellido1" style="border-color: black"  value="#{gestionPersonaBean.detallePersona.apellido1}" class="form-control" disabled="#{!gestionPersonaBean.detallePersona.editable}"></h:inputText>
+                                            <h:inputText id="txtApellido1" style="border-color: black"  value="#{gestionPersonaBean.detallePersona.apellido1}" class="form-control" disabled="#{!gestionPersonaBean.detallePersona.editable}" required="true" requiredMessage="Segundo apellido requerido"></h:inputText>
                                         </div>
                                     </div>
                                     <div class="col-sm-3">
@@ -75,7 +77,7 @@
                                     <div class="col-sm-2">
                                         <div class="form-group">
                                             <label>N documento</label>
-                                            <h:inputText id="txtDocumento" style="border-color: black" value="#{gestionPersonaBean.detallePersona.documento}" class="form-control" disabled="#{!gestionPersonaBean.detallePersona.editable}" ></h:inputText>
+                                            <h:inputText id="txtDocumento" style="border-color: black" value="#{gestionPersonaBean.detallePersona.documento}" class="form-control" disabled="#{!gestionPersonaBean.detallePersona.editable}" required="true" requiredMessage="Numero de documento requerido"></h:inputText>
                                         </div>
                                     </div>
                                     <div class="col-sm-2">
@@ -157,8 +159,8 @@
                                                 <td>#{deudas.fechaDeudas}</td>
                                                 <td>#{deudas.personas.nombre1}</td>
                                                 <td>
-                                                    <h:commandLink class="fa fa-eye col-sm-4" onclick="$('#modalMovimiento').modal('show');">
-                                                        <f:ajax event="click" listener="#{gestionPersonaBean.cargarMovimientosDeuda(deudas)}" render="frmDetallePersona:modalMovimiento frmDetallePersona:tablaMovimientos frmDetallePersona:tblMovimientoDeudas" ></f:ajax>
+                                                    <h:commandLink class="fa fa-eye col-sm-4" >
+                                                        <f:ajax event="click" listener="#{gestionPersonaBean.cargarMovimientosDeuda(deudas)}" ></f:ajax>
                                                     </h:commandLink>
                                                 </td>
                                             </tr>
@@ -172,36 +174,44 @@
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     <h4 class="modal-title" id="myModalLabel">Movimiento de la deuda</h4>
                                 </div>
-                                <div class="modal-body">
-                                    <h:panelGroup id="tablaMovimientos">
-                                        <table class="table table-bordered">
-                                            <thead>
-                                                <tr>
-                                                    <th>Fecha movimiento</th>
-                                                    <th>Referencia</th>
-                                                    <th>Fases</th>
-                                                    <th>Usuario</th>
-                                                    <th>Persona</th>
-                                                    <th>Plan</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <ui:repeat value="#{gestionPersonaBean.deudaSelecionada.listMovimientos}" var="MovimientoDeuda" >
-                                                    <tr>
-                                                        <td>#{MovimientoDeuda.fechaproceso}</td>
-                                                        <td>#{MovimientoDeuda.deudas.referencia}</td>
-                                                        <td>#{MovimientoDeuda.fasesTrabajos.descripcion}</td>
-                                                        <td>#{MovimientoDeuda.usuarios.nombre}</td>
-                                                        <td>#{MovimientoDeuda.personas.nombre1} #{MovimientoDeuda.personas.apellido1}</td>
-                                                        <td>#{MovimientoDeuda.deudas.planTrabajoDeuda.descripcion} </td>
-                                                    </tr>
-                                                </ui:repeat>
-                                            </tbody>
-                                        </table>
-                                    </h:panelGroup>
-                                </div>
+                                <h:panelGroup id="tablaMovimientos">
+                                    <div class="modal-body">
+                                        <c:choose>
+                                            <c:when test="#{gestionPersonaBean.deudaSelecionada.listMovimientos.size() eq 0}">
+                                                <p:messages autoUpdate="true" id="mensajeConsultarPersona" showIcon="false" closable="true" severity="error,warn"></p:messages>
+                                            </c:when>
+                                            <c:otherwise>
+                                                <table class="table table-bordered">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Plan</th>
+                                                            <th>Fases</th>
+                                                            <th>Referencia</th>
+                                                            <th>Fecha movimiento</th>
+                                                            <th>Usuario</th>
+                                                            <th>Persona</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <ui:repeat value="#{gestionPersonaBean.deudaSelecionada.listMovimientos}" var="MovimientoDeuda" >
+                                                            <tr>
+                                                                <td>#{MovimientoDeuda.deudas.planTrabajoDeuda.descripcion} </td>
+                                                                <td>#{MovimientoDeuda.fasesTrabajos.descripcion}</td>
+                                                                <td>#{MovimientoDeuda.deudas.referencia}</td>
+                                                                <td>#{MovimientoDeuda.fechaproceso}</td>
+                                                                <td>#{MovimientoDeuda.usuarios.nombre}</td>
+                                                                <td>#{MovimientoDeuda.personas.nombre1} #{MovimientoDeuda.personas.apellido1}</td>
+                                                            </tr>
+                                                        </ui:repeat>
+                                                    </tbody>
+                                                </table>
+                                            </c:otherwise>
+                                        </c:choose>
+                                    </div>
+                                </h:panelGroup>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                                 </div>
