--- a/CobroCoactivo/web/paginas/gestionUsuarios/consultarUsuarios.xhtml
+++ b/CobroCoactivo/web/paginas/gestionUsuarios/consultarUsuarios.xhtml
@@ -4,7 +4,8 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <body>
         <ui:composition template="./../../plantillas/PlantillaGeneral.xhtml">
@@ -23,6 +24,7 @@
                             </ol>
                         </section>
                         <section class="content">
+                            <p:messages autoUpdate="true" id="mensajeConsultarPersona" showIcon="false" closable="true" severity="error,warn,info"></p:messages>
                             <div class="box box-danger">
                                 <div class="box-header with-border">
                                     <h3 class="box-title">Busquedas</h3>
@@ -51,7 +53,7 @@
                                                             </div>
                                                             <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
                                                                 <div class="input-group margin-5">
-                                                                    <h:inputText class="form-control text-uppercase" maxlength="20" id="txtNombreUsuario" value="#{gestionUsuariosBean.nombreUsuario}"></h:inputText>
+                                                                    <h:inputText class="form-control text-uppercase" maxlength="20" id="txtNombreUsuario" value="#{gestionUsuariosBean.nombreUsuario}" required="true" requiredMessage="Digite el nombre del usuario"></h:inputText>
                                                                     <span class="input-group-btn">
                                                                         <h:commandLink class="btn btn-info btn-danger" value="Buscar">
                                                                             <f:ajax event="click" listener="#{gestionUsuariosBean.consultarUsuarios(1)}" execute="frmConsultas:txtNombreUsuario" render="frmConsultas:tblUsuario"/>
@@ -71,19 +73,16 @@
                                     <table class="table table-bordered ">
                                         <thead>
                                             <tr>
-                                                <th>#</th>
-                                                <th>nombre</th>
-                                                <th>estado</th>
+                                                <th>Nombre</th>
+                                                <th>Estado</th>
                                                 <th>Acción</th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <c:forEach items="#{gestionUsuariosBean.listadoUsuarios}" var="usuario">
                                                 <tr>
-                                                    <td>#{usuario.id}</td>
                                                     <td>#{usuario.nombre}</td>
                                                     <td>#{usuario.estadoUsuarios.descripcion}</td>
-                                                    
                                                     <td class="row">
                                                         <h:commandLink class="fa fa-eye col-sm-4" action="detalleUsuario.xhtml">
                                                             <f:setPropertyActionListener value="#{usuario}" target="#{requestBean.usuario}"/>
